fix testo e tag class

--- a/style.css
+++ b/style.css
@@ -15,3 +15,43 @@
 .nuovo {
     border: 1px solid
 }
+
+.nuovo {
+    margin-top: 16px;
+}
+
+.nuovo {
+    padding-bottom: 16px;
+}
+
+.nuovo{
+    width: 250px;
+}
+
+.nuovo {
+    margin-left: 700px;
+}
+
+.nuovo {
+    border: 1px solid
+}
+
+.vecchio {
+    margin-top: 16px;
+}
+
+.vecchio {
+    padding-bottom: 16px;
+}
+
+.vecchio{
+    width: 250px;
+}
+
+.vecchio {
+    margin-left: 700px;
+}
+
+.vecchio {
+    border: 1px solid
+}
